Rearranged and grouped Variables

--- a/sass/aura/_variables.scss
+++ b/sass/aura/_variables.scss
@@ -1,17 +1,24 @@
 //////////////////////////////
-// Internal Variables for Aurora
-//////////////////////////////
-$measure:           52em        !default;
-$alphabet-count:    26          !default;
-$sizes: 'full' 'large' 'medium' 'small';
-
-//////////////////////////////
 // User-Defined Variables for Aurora
 //////////////////////////////
-$body-font-size:    16px                    !default;
-$total-cols:        12                      !default;
-$main-content-cols: 9                       !default;
-$gutter-to-col:     1, 4                    !default;
-$measure-width:     $alphabet-count * 2     !default;
-$font-scale:        true                    !default;
-$responsive-ratio:  $golden                 !default;
+// Basic Options.
+$body-font-size:        16px                    !default;
+$total-cols:            12                      !default;
+$main-content-cols:     9                       !default;
+$font-scale:            true                    !default;
+$obj-scale:             true                    !default;
+// Advanced Options
+$gutter-to-col:         1, 4                    !default;
+$alphabet-count:        26                      !default;
+$measure-width:         $alphabet-count * 2     !default;
+$responsive-ratio:      $major-third            !default;
+// If using font-scale, suggest $major-third ratio. If not, suggest $golden ratio
+
+//////////////////////////////
+// Internal Variables for Aurora
+//////////////////////////////
+$measure:           false                       !default; // Gets replaced by system, not to be used by user
+$gutter-col-total:  5                           !default;
+$breakpoints:       false                       !default; // Gets replaced by system, not to be used by user
+$body-font-size-em: false                       !default;
+$sizes:             'full' 'large' 'medium' 'small';
