Basic setup for Aura mixin (what is to be included)

--- a/sass/_aura.scss
+++ b/sass/_aura.scss
@@ -2,10 +2,12 @@
 // Requires Susy, so Import Susy
 //////////////////////////////
 @import 'susy';
+@import 'modular-scale';
 
 //////////////////////////////
 // Aurora Variables, Functions, Mixins
 //////////////////////////////
-@import 'aurora/variables';
-@import 'aurora/functions';
-@import 'aurora/mixins';
+@import 'aura/variables';
+@import 'aura/functions';
+@import 'aura/mixins';
+
