--- a/sass/aura/_variables.scss
+++ b/sass/aura/_variables.scss
@@ -11,14 +11,15 @@ $obj-scale:             true                    !default;
 $gutter-to-col:         1, 4                    !default;
 $alphabet-count:        26                      !default;
 $measure-width:         $alphabet-count * 2     !default;
+$lh-addition:           .3em                    !default;
 $responsive-ratio:      $major-third            !default;
 // If using font-scale, suggest $major-third ratio. If not, suggest $golden ratio
 
 //////////////////////////////
 // Internal Variables for Aurora
 //////////////////////////////
-$measure:           false                       !default; // Gets replaced by system, not to be used by user
+$measure:           false                       !default;
 $gutter-col-total:  5                           !default;
-$breakpoints:       false                       !default; // Gets replaced by system, not to be used by user
+$breakpoints:       false                       !default;
 $body-font-size-em: false                       !default;
 $sizes:             'full' 'large' 'medium' 'small';
