--- a/sass/aura/_variables.scss
+++ b/sass/aura/_variables.scss
@@ -12,7 +12,7 @@ $gutter-to-col:         1, 4                    !default;
 $alphabet-count:        26                      !default;
 $measure-width:         $alphabet-count * 2     !default;
 $lh-addition:           .3em                    !default;
-$responsive-ratio:      $major-third            !default;
+$responsive-ratio:      false           !default;
 // If using font-scale, suggest $major-third ratio. If not, suggest $golden ratio
 
 //////////////////////////////
