Modular scale conditional behavior
The modular scale function writes a variable to indicate it is loaded.
This allows for conditional statements to be written that change
behavior or warn the user when it is needed.

--- a/sass/aura/_functions.scss
+++ b/sass/aura/_functions.scss
@@ -52,7 +52,14 @@
 //////////////////////////////
 // Find Breakpoints for Modular Scale
 //////////////////////////////
+
+$modular-scale-loaded: false !default;
+
 @function responsive-scale() {
+  @if $modular-scale-loaded == false {
+    @warn 'the responsive-scale function requires modular-scale to be loaded. The responsive-ratio value was returned.';
+    @return responsive-ratio();
+  }
   $full: columns-width();
   $breakpoints: $full;
   // Add 1/2 Alphabet to Measure for Medium
