--- a/sass/aura/_mixins.scss
+++ b/sass/aura/_mixins.scss
@@ -71,6 +71,8 @@
   }
 }
 
+$modular-scale-loaded: false !default;
+
 //////////////////////////////
 // Aura Font Scale Font
 //////////////////////////////
@@ -78,6 +80,9 @@
   $ms: ms($scale, $body-font-size-em, $responsive-ratio);
   font-size: $ms;
   line-height: $ms + (1em - (.5 * $ms));
+  @if $modular-scale-loaded == false {
+    @warn 'the font-scale mixin requires modular-scale to be loaded.';
+  }
 }
 
 //////////////////////////////
@@ -99,5 +104,8 @@
       }
     }
     $i: $i + 1;
+  }
+  @if $modular-scale-loaded == false {
+    @warn 'the font-scale mixin requires modular-scale to be loaded.';
   }
 }
