--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,18 @@ img, object, embed, iframe, video, audio {
 
 /* line 69, ../sass/aura/_mixins.scss */
 .measure, #main-content {
-  display: inline;
-  float: left;
-  width: 72.131%;
+  clear: both;
+  margin-left: 1.639%;
   margin-right: 1.639%;
+}
+@media screen and (min-width: 27.068em) {
+  /* line 69, ../sass/aura/_mixins.scss */
+  .measure, #main-content {
+    display: inline;
+    float: left;
+    width: 72.131%;
+    margin-right: 1.639%;
+  }
 }
 
 /* line 17, ../sass/style.scss */
