Updated to allow for the hard coding of a width
Now with three ways to play!
Original font-scale on/off plus a brand new way! The ability to set a total width. This isn't recommended and will set font-scale to false, but will still generate the @media-queries for you based on your chosen responsive ratio.

--- a/sass/aura/_mixins.scss
+++ b/sass/aura/_mixins.scss
@@ -2,8 +2,15 @@
 // Aura Setup Mixin
 //////////////////////////////
 @mixin aura-setup {
+  // Hard sets font-scale to false if width is set
+  @if $width {
+    $font-scale: false;
+  }
   // Calculate HTML font size in Em
   $body-font-size-em: base-font-size();
+  $body-font-size-px: bfs('px');
+  $body-font-size-percent: bfs('%');
+  $body-font-size-pt: bfs('pt');
   
   // Default Responsive Ratio if none is set
   @if not $responsive-ratio {
@@ -23,12 +30,22 @@
     $measure: $measure-width;
   }
   // Set UP Grid
-  $col-total: col-total();
-  $gutter-col-total: gutter-col-total();
-  $gutter-col-grid: gutter-col-grid($col-total);
-  $col-width: col-width($gutter-col-grid);
-  $gutter-width: gutter-width($gutter-col-grid);
-  $side-gutter-width: $gutter-width;
+  // If there's a width, figure out body-font-size for width
+  @if $width {
+    $width-em: px-em($width);
+    $sub-col: $width-em / ($total-cols * gutter-col-total() + nth($gutter-to-col, 1));
+    $col-width: $sub-col * nth($gutter-to-col, 2);
+    $gutter-width: $sub-col * nth($gutter-to-col, 1);
+    $side-gutter-width: $gutter-width;
+  }
+  @else {
+    $col-total: col-total();
+    $gutter-col-total: gutter-col-total();
+    $gutter-col-grid: gutter-col-grid($col-total);
+    $col-width: col-width($gutter-col-grid);
+    $gutter-width: gutter-width($gutter-col-grid);
+    $side-gutter-width: $gutter-width;
+  }
   
   // Set Root Em
   html {
@@ -71,6 +88,10 @@
     @include respond-to('small') {
       @include columns($main-content-cols);
     }
+  }
+  
+  %aura-container {
+    @include container;
   }
 }
 
